Wed May 16 02:38:43 CEST 2012  John Tytgat  <John.Tytgat@aaug.net>

	* stdlib/mkstemp.c (mkstemp): Change O_TRUNC into O_EXCL.
	(mkstemp64): Add.
	* include/stdlib.h (mkstemp64): Add.
	* stdio/tmpfile.c (generate_temporary_filename): Simplify. Improve
	template checking.  Add offset to start index.
	(get_tmpdir, isdir): Add.
	(__tmpbuf): Adjust length to L_tmpnam.
	(tmpnam, tmpnam_r): Support __RISCOSIFY_NO_PROCESS case.  Fixes bug
	#238.
	(tempnam): Remove strategy 4, was the same as 3.  Support
	__RISCOSIFY_NO_PROCESS case.

Mon May 14 03:08:50 CST 2012  Christopher Martin  <belles@internode.on.net>

	* sound/DRender.h: Added. Having made improvements to
	DigitalRenderer, imported and adapted the DRender interface
	included in the DigitalRenderer sources. Substantial use of
	inline assembly functions to optimise calls to most
	DigitalRenderer SWIs.
	* sound/DRender.s (DRender_SetDefaults): Likewise. A function to
	call SWI DigitalRenderer_SetDefaults is provided here because it
	uses so many registers that it is not practical to implement in
	inline assembly.
	* sound/DRender.s (DRender_LoadModule): Likewise. This function
	uses SWI OS_Module to load System:Modules.DRenderer which is
	preferable to using *RMLoad through SWI OS_CLI.
	* sound/dsp.c: Extensive changes allowed by the new DRender
	interface allowing /dev/dsp emulation to be made simpler and
	more efficient.

Wed Apr  4 11:55:56 BST 2012  Lee Noar  <leenoar@sky.com>

	* unix/ul_select.c(select): Set errno to EBADF and return
	-1 if one of the sets contains an invalid file descriptor
	(as defined by the Linux standard).
	This can occur if a file is closed whilst being polled by
	select. Fixes a problem in Mono whereby a pipe controlling
	a socket is closed, leaving select stuck in an infinite
	loop and preventing the program from exiting.

Tue Apr  3 19:53:12 BST 2012  Lee Noar  <leenoar@sky.com>

	* unix/dev.c(__pipewrite): Always restore the file pointer.